--- a/app/views/football_grounds/show.html.erb
+++ b/app/views/football_grounds/show.html.erb
@@ -34,18 +34,18 @@
     <% form_for @play do |f| %>
       <%= f.hidden_field :football_ground_id %>
       <span>我要去这块球场踢...</span><br />
-      <p><label>哪天去</label><br/>
+      <p><label>日期</label><br/>
       <%= select_date @default_start_time, :prefix => "start_time", :start_year => Date.today.year, :end_year => Date.today.year+1, :use_month_numbers => true %></p>
 
-      <p><label>几点到</label><br/>
+      <p><label>开始时间</label><br/>
       <%= select_hour @default_start_time,:prefix => "start_time" %>
       <%= select_minute @default_start_time,:prefix => "start_time", :minute_step=>15 %></p>
 
-      <p><label>几点走</label><br/>
+      <p><label>结束时间</label><br/>
       <%= select_hour @default_end_time,:prefix => "end_time" %>
       <%= select_minute @default_end_time,:prefix => "end_time", :minute_step=>15 %></p>
 
-      <%= f.submit '确认' %>
+      <%= f.submit '创建' %>
       <%= f.submit "撤销", :onclick=>'j("#play_create_div").dialog("close");return false;' %>
     <% end %>
   </div>
