--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -1,6 +1,6 @@
 <div id="wide_left_content">
   <div class="sect">
-    <h2>踢着玩的基本信息</h2>
+    <h2>随便踢踢的基本信息</h2>
     <div class="activities">
       <%=date_div_link @play.start_time, @user%>
       <div class="detail">
