--- a/app/views/sided_matches/show.html.erb
+++ b/app/views/sided_matches/show.html.erb
@@ -141,8 +141,8 @@
     <%= render :partial=>'posts/narrow_post_list', :object=>@posts%>
     <div style="margin: 10px 0  0 10px;float:right;">
       <%links = []%>
-      <%links << "#{link_to '针对本场训练发言', new_sided_match_post_path(@match)}" if logged_in? && current_user.is_team_member_of?(@team)%>
-      <%links << "#{link_to '更多', sided_match_posts_path(@match)}"%>
+      <%links << "> #{link_to '针对本场训练发言', new_sided_match_post_path(@match)}" if logged_in? && current_user.is_team_member_of?(@team)%>
+      <%links << "> #{link_to '更多', sided_match_posts_path(@match)}"%>
       <%= links_with_sticks links%>
     </div>
     <div class="cb"></div>
