--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -46,8 +46,8 @@
     <%= render(:partial => 'posts/post_list', :object => @posts)%>
     <div style="margin: 5px 10px  0 10px;float:right">
       <%links = []%>
-      <%links << "#{link_to '针对本次训练发言', new_training_post_path(@training)}" if logged_in? && current_user.is_team_member_of?(@training.team)%>
-      <%links << "#{link_to '更多', training_posts_path(@training)}"%>
+      <%links << "> #{link_to '针对本次训练发言', new_training_post_path(@training)}" if logged_in? && current_user.is_team_member_of?(@training.team)%>
+      <%links << "> #{link_to '更多', training_posts_path(@training)}"%>
       <%= links_with_sticks links%>
     </div>
   </div>
