--- a/app/views/match_invitations/edit.html.erb
+++ b/app/views/match_invitations/edit.html.erb
@@ -3,19 +3,17 @@
   <%= javascript_include_tag football_ground_select_url %>
 <%end%>
 
-<%content_for(:stylesheet) do%>
-  <style>
-    .football_ground_select select {
-      width: 90px;
-    }
+<%#content_for(:stylesheet) do%>
+  <%#*<style>%>
+    <%#*.football_ground_select select {%>
+      <%#*width: 90px;%>
+    <%#*}%>
 
-    .football_ground_select .province_city_select select {
-      width: 70px;
-    }
-  </style>
-<%end%>
-
-
+    <%#*.football_ground_select .province_city_select select {%>
+      <%#*width: 70px;%>
+    <%#*}%>
+  <%#*</style>%>
+<%#end%>
 
 <div id="narrow_right_content" style="width:290px;">
   <div class="sect">
