--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,4 @@
+<% cache do %>
 <div id="footer">
   <span class="arrd">
   © 2008 WeFootball.org, All Rights Reserved
@@ -10,3 +11,4 @@
   </span>
   <div class="cb"></div>
 </div>
+<%end%>
