--- a/app/views/shared/about.html.erb
+++ b/app/views/shared/about.html.erb
@@ -1,3 +1,4 @@
+<% cache do %>
 <div id="wide_left_content" class="help">
   <h1>WeFootball能做什么 [个人篇]</h1>
   <div class="sect">
@@ -80,3 +81,4 @@
   </div>
 </div>
 <div class="cb"></div>
+<%end%>
