--- a/app/views/shared/faq.html.erb
+++ b/app/views/shared/faq.html.erb
@@ -1,3 +1,4 @@
+<% cache do %>
 <div id="wide_left_content" class="help">
   <h1>常见问题</h1>
   <div class="sect">
@@ -15,3 +16,4 @@
   </div>
 </div>
 <div class="cb"></div>
+<%end%>
