--- a/app/views/plays/new.html.erb
+++ b/app/views/plays/new.html.erb
@@ -36,15 +36,13 @@
   <% end %>
 </div>
 
-<div id="narrow_right_content">
-  <div class="sect">
-    <h2></h2>
-    <ul class="sidebar_menu">
-      <li>
-        > <%= smart_return_user_view_menu_item(@user) %>
-      </li>
-    </ul>
-  </div>
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+      > <%= smart_return_user_view_menu_item(@user) %>
+    </li>
+  </ul>
 </div>
 
 <div class="cb"></div>
