--- a/app/views/sided_matches/new.html.erb
+++ b/app/views/sided_matches/new.html.erb
@@ -11,4 +11,13 @@
   <% end %>
 </div>
 
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+      > <%= link_to '返回球队首页', team_view_path(@team) %>
+    </li>
+  </ul>
+</div>
+
 <div class="cb"></div>
