--- a/app/views/posts/_narrow_post_list.html.erb
+++ b/app/views/posts/_narrow_post_list.html.erb
@@ -7,17 +7,7 @@
 
 <% for post in narrow_post_list %>
   <tr>
-    <td>
-      <%if !post.training_id.nil?%>
-        <%= training_icon_link(post.training_id)%>
-      <%elsif !post.match_id.nil?%>
-        <%= match_icon_link(post.match_id)%>
-      <%elsif !post.sided_match_id.nil?%>
-        <%= sided_match_icon_link(post.sided_match_id)%>
-      <%else%>
-        <%= "&nbsp;"%>
-      <%end%>
-    </td>
+    <td><%=post_icon_link post%></td>
     <td><%=h post.user.nickname %></td>
     <td><%=link_to h(post.title), post  %><%="<span class='private'>&nbsp;&nbsp;-&nbsp;&nbsp;(仅队内可见)</span>" if post.is_private%></td>
   </tr>
