--- a/public/stylesheets/wefootball.css
+++ b/public/stylesheets/wefootball.css
@@ -696,6 +696,10 @@ div.pagination a, .current, .gap{ padding: 2px 4px; }
 div.pagination .prev_page { margin-right: 20px; }
 div.pagination .next_page { margin-left: 20px; }
 
+.atom {
+  margin: 0 0 0 10px;
+}
+
 div.help {
     padding-left:5px;
     margin-bottom: 30px;
