--- a/app/views/posts/_many_teams_post_list.html.erb
+++ b/app/views/posts/_many_teams_post_list.html.erb
@@ -2,15 +2,17 @@
   <tr>
     <th style="width:15px">&nbsp;</th>
     <th>话题</th>
+    <th>球队</th>
     <th>作者</th>
     <th style="width:30px">回复</th>
     <th style="width:100px; text-align:right">最后回复</th>
   </tr>
 
-<% for post in post_list %>
+<% for post in many_teams_post_list %>
   <tr>
     <td><%=post_icon_link post%></td>
     <td><%=link_to h(post.title), post  %><%="<span class='private'>&nbsp;&nbsp;-&nbsp;&nbsp;(仅队内可见)</span>" if post.is_private%></td>
+    <td><%=link_to h(post.team.shortname), team_view_path(post.team) %></td>
     <td><%=h post.user.nickname %></td>
     <td><%= post.replies.size %></td>
     <td><%= post.updated_at.strftime('%Y-%m-%d %H:%M') %></td>
