--- a/public/stylesheets/wefootball.css
+++ b/public/stylesheets/wefootball.css
@@ -173,6 +173,10 @@ form.button-to {
   text-align:center;
 }
 
+#header_setting .unread {
+  font-weight: 700;
+}
+
 #header_setting img.my_down {
   margin-bottom:2px;
 }
@@ -229,6 +233,10 @@ form.button-to {
   display:inline;
   list-style-type:none;
   margin:0 10px;
+}
+
+#header_menu div.l2_menu_list ul li .unread {
+  font-weight: 700;
 }
 
 #header_search {
@@ -501,6 +509,11 @@ div.post div.content {
   float:left;
 }
 
+.post_more {
+  margin:10px 0 0;
+  float:right;
+}
+
 ul.sidebar_menu {
   margin:10px 0;
   padding:0;
@@ -630,6 +643,24 @@ div.result_block {
 div.result_block span.another_result {
   font-weight:700;
   color:#333;
+}
+
+div.pagination {
+  background: #F2F7AB;
+  color: #666;
+  padding: 1px 0;
+  margin: 15px 0px 5px 0px;
+  text-align: center;
+  font: 14.8px normal Arial, Helvetica, sans-serif;
+  line-height: 150%;
+}
+
+div.pagination a, .current, .gap{ padding: 2px 4px; }
+div.pagination .prev_page { margin-right: 20px; }
+div.pagination .next_page { margin-left: 20px; }
+
+.atom {
+  margin: 0 0 0 10px;
 }
 
 div.help h1 {
