--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -8,7 +8,7 @@
   <%= link_to("球队", user_team_joins_path(user), :class=>is_selected_user_menu_item?(:teams))%>
   <%= day_calendar_link('活动', Time.now, user, :class=>is_selected_user_menu_item?(:activities))%>
   <%= link_to("消息#{has_unread_messages ? "(#{messages_count})" : ''}", 
-    '#', 
+    broadcasts_path, 
     :class=>"#{is_selected_user_menu_item?(:messages)} #{has_unread_messages ? 'unread' : ''}")%>
   <%= link_to("设置",  edit_user_path(current_user), :class=>is_selected_user_menu_item?(:setting))%>
 </div>
@@ -32,7 +32,7 @@
     <li><%= day_calendar_link('今日活动', Time.now, user)%></li>
   </ul>
   <ul>
-    <li><%= link_to("广播", '#')%></li>
+    <li><%= link_to("广播", broadcasts_path)%></li>
     <li><%= link_to("讨论更新", related_posts_path)%></li>
     <li><%= link_to("收件箱#{has_unread_messages ? "(#{messages_count})" : ''}", 
       messages_path(:as=>'receiver'),
