--- a/app/views/broadcasts/index.html.erb
+++ b/app/views/broadcasts/index.html.erb
@@ -1,3 +1,18 @@
-<%for bc in @bcs%>
-  <%=broadcast_text(bc) %>
-<%end%>
+<div id="wide_left_content" class="sect">
+  <h2><%=h @title%></h2>
+  <%for bc in @bcs%>
+    <%=broadcast_text(bc) %>
+  <%end%>
+  <%= will_paginate @bcs %>
+</div>
+
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+      > <%= smart_return_user_view_menu_item(@user) %>
+    </li>
+    <li class="seperate"></li>
+  </ul>
+</div>
+<div class="cb"></div>
