--- a/app/views/shared/index.html.erb
+++ b/app/views/shared/index.html.erb
@@ -15,13 +15,13 @@
     <div class="notification">
       <%= link_to '了解一下WeFootball能做些什么？', site_about_path%>
       <br/><br/>
-      WeFootball预告: <a href="http://blog.wefootball.org/2008/5/6/8">广播功能即将上线</a> - 05.06
+      WeFootball<a href="http://blog.wefootball.org/2008/5/6/8">广播功能</a>上线 - 05.07
+      <br/><br/>
+      球队讨论支持RSS订阅 - 05.07
       <br/><br/>
       个人和球队的近期活动已支持iCalendar格式 - 05.06
       <br/><br/>
       WeFootball<%= link_to '关于我们', site_about_path%>和<%= link_to '常见问题', site_faq_path%>上线 - 04.29
-      <br/><br/>
-      WeFootball上线试运行 - 04.24
       <br/><br/>
       要给WeFootball提提建议？ 请到<%= link_to '站务论坛', site_posts_path%>留言
     </div>
