--- a/app/views/team_joins/player_management.html.erb
+++ b/app/views/team_joins/player_management.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <div id="wide_left_content">
-  <%if @other_uts.current_page == 1%>
+  <%if @player_uts.size > 0%>
   <div class="sect">
     <h2>队员名单</h2>
     <%@player_uts.each do |ut| %>
@@ -21,6 +21,7 @@
   </div>
   <%end%>
 
+  <%if @other_uts.size > 0%>
   <div class="sect">
     <h2>可选的队员</h2>
     <%@other_uts.each do |ut| %>
@@ -36,8 +37,9 @@
       </div>
     <%end%>
     <div class="cb"></div>
-    <%= will_paginate @other_uts %>
   </div>
+  <%end%>
+  <%= will_paginate @uts %>
 </div>
 
 <div class="cb"></div>
