--- a/app/views/shared/index.html.erb
+++ b/app/views/shared/index.html.erb
@@ -21,7 +21,7 @@
       <br/><br/>
       个人和球队的近期活动已<a href="http://blog.wefootball.org/2008/5/7/9">支持iCalendar格式</a> - 05.07
       <br/><br/>
-      WeFootball<%= link_to '关于我们', site_about_path%>和<%= link_to '常见问题', site_faq_path%>上线 - 04.29
+      <%= link_to '关于我们', site_about_path%>和<%= link_to '常见问题', site_faq_path%>上线 - 04.29
       <br/><br/>
       要给WeFootball提提建议？ 请到<%= link_to '站务论坛', site_posts_path%>留言
     </div>
