--- a/app/views/shared/index.html.erb
+++ b/app/views/shared/index.html.erb
@@ -15,6 +15,8 @@
     <div class="notification">
       <%= link_to '了解一下WeFootball能做些什么？', site_about_path%>
       <br/><br/>
+      预告：<a href="http://blog.wefootball.org/2008/5/11/12">看球功能</a>即将推出 - 05.11
+      <br/><br/>
       <a href="http://blog.wefootball.org/2008/5/8/10">广播功能</a>上线 - 05.08
       <br/><br/>
       球队讨论<a href="http://blog.wefootball.org/2008/5/7/9">支持RSS订阅</a> - 05.07
